// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert > should render the \`Alert\` in the error state 1`] = `
<div
  class="alert"
>
  <svg
    class="dusk-icon dusk-icon--size--large"
    role="graphics-symbol"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"
    />
  </svg>
  
  <!--&lt;Icon&gt;-->
   
  <header>
    <h3>
      There was an error fetching the data.
    </h3>
     
    <p
      class="alert__error-message"
    >
      error
    </p>
  </header>
   
  <button
    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--normal dusk-icon-button"
    type="button"
  >
    <svg
      class="dusk-icon dusk-icon--size--large dusk-button__icon"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M2 12C2 16.97 6.03 21 11 21C13.39 21 15.68 20.06 17.4 18.4L15.9 16.9C14.63 18.25 12.86 19 11 19C4.76 19 1.64 11.46 6.05 7.05C10.46 2.64 18 5.77 18 12H15L19 16H19.1L23 12H20C20 7.03 15.97 3 11 3C6.03 3 2 7.03 2 12Z"
      />
    </svg>
    
    <!--&lt;Icon&gt;-->
     
    
  </button>
  <!--&lt;Button&gt;-->
</div>
`;

exports[`Alert > should render the \`Alert\` in the no data state 1`] = `
<div
  class="alert"
>
  <svg
    class="dusk-icon dusk-icon--size--large"
    role="graphics-symbol"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"
    />
  </svg>
  
  <!--&lt;Icon&gt;-->
   
  <header>
    <h3>
      No data to display
    </h3>
  </header>
   
</div>
`;
